--- a/styles.css
+++ b/styles.css
@@ -83,14 +83,14 @@ shadow {
 }
 
 .btn#btn-generate-password {
-  padding: 9px 17px 9px 15px;
+  padding: 0.5rem 1rem;
 
   background: var(--btn-primary-background-color);
 
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 6px;
 
-  margin-bottom: 36px;
+  margin-bottom: calc(36/16 * 1rem);
 
   font-family: 'Inter', sans-serif;
   font-style: normal;
@@ -108,12 +108,11 @@ shadow {
 }
 
 .divider#between-generate-and-password {
-  margin-bottom: 36px;
+  margin-bottom: calc(36/16 * 1rem);
 }
 
 .password-container {
   display: flex;
-  flex-wrap: wrap;
   gap: 24px;
 }
 
@@ -135,7 +134,7 @@ shadow {
   text-align: center;
 }
 
-.password-output::placeholder{
+.password-output::placeholder {
   color: var(--fc-secondary);
   text-align: center;
   text-wrap: pretty;
@@ -177,4 +176,45 @@ a:focus {
   outline: 3px solid var(--btn-primary-background-color);
   outline-offset: 2px;
   border-radius: 4px;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 600px) {
+  body {
+    max-width: 100%;
+    padding: 20px;
+  }
+
+  #main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #main-title {
+    text-align: center;
+    margin-bottom: calc(20/16 * 1rem);
+  }
+
+  #sub-title {
+    text-align: center;
+    margin-bottom: calc(36/16 * 1rem);
+  }
+
+  #btn-generate-password {
+    width: clamp(190px, 100%, 200px);
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .divider {
+    width: 100%;
+  }
+
+  .password-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
 }
