--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,6 @@ body {
   color: var(--fc-primary);
 }
 
-shadow {
-  box-shadow: 0px 1px 2px 0px #0000000D;
-}
-
 #sub-title {
   font-style: normal;
   font-weight: 400;
@@ -71,7 +67,45 @@ shadow {
 
   color: var(--fc-secondary);
 
-  margin-bottom: 52px;
+  margin-bottom: calc(52/16 * 1rem);
+}
+
+.password-options-container {
+  width: 100%;
+
+  display: flex;
+  justify-content: safe;
+  align-items: center;
+
+  gap: 20px;
+
+  margin-bottom: calc(40/16 * 1rem);
+}
+
+.password-options-label {
+  color: var(--fc-secondary);
+  font-weight: bold;
+  margin: 4px;
+}
+
+.password-options-label::after{
+  content: ": ";
+}
+
+input#password-length {
+  font-family: var(--ff-primary);
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 32px;
+
+  text-align: center;
+
+  border: none;
+  border-radius: 4px;
+
+  padding: 0;
+
+  width: 40px;
 }
 
 .btn {
