--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ body {
   content: ": ";
 }
 
-input#password-length {
+input#password-length-input {
   font-family: var(--ff-primary);
   font-size: 1rem;
   font-weight: 500;
