--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,6 @@ body {
 .password-options-label {
   color: var(--fc-secondary);
   font-weight: bold;
-  margin: 4px;
 }
 
 .password-options-label::after{
@@ -154,7 +153,7 @@ input#password-length-input {
 
 .password-output {
   width: 210px;
-  height: 40px;
+  height: auto;
 
   text-align: center;
   color: var(--fc-primary);
@@ -194,6 +193,17 @@ input#password-length-input {
 
 #btn-copy-to-clipboard svg {
   color: var(--bg-secondary-color);
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
 
 .toast {
@@ -248,13 +258,14 @@ input#password-length-input {
 @media screen and (max-width: 600px) {
   body {
     max-width: 100%;
-    padding: 20px;
   }
 
   #main-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    padding-top: 50px;
   }
 
   #main-title {
@@ -274,8 +285,6 @@ input#password-length-input {
   }
 
   #btn-generate-password {
-    width: clamp(190px, 100%, 200px);
-    margin: 0 auto;
     text-align: center;
   }
 
