--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@
 
   --input-focus-background-color: #364153;
 
+  --toast-background: var(--btn-primary-background-color);
+
   --white: #f0f0f0;
 }
 
@@ -328,7 +330,7 @@ output#password-length-output {
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: var(--btn-primary-background-color);
+  background-color: var(--toast-background);
   color: var(--white);
   padding: 10px 20px;
   border-radius: 5px;
